# -AI-Powered-Sentiment-Analysis-Platform

./: Arabert_Fine_Tuning.ipynb  README.md  pyproject.toml
backend/django_app/django_app/: settings.py
backend/fastapi_service/: requirements.txt
backend/flask_api/: requirements.txt
